[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "wave-animator"
version = "0.1"
dependencies = [
    "matplotlib",
]
requires-python = ">= 3.8"
authors = [
    {name = "R. Menzel"},
]
maintainers = [
    {name = "R. Menzel", email="menzel@gmail.com"}
]
description = "Creates a gif using fluid dynamic model snapshots."
readme = "README.md"
classifiers = [
    "Programming Language :: Python"
]

[project.scripts]
wave-animator = "wave_animator.plotter:cli"
